# task-platform

./: .gitignore  README.md
infrastructure/infrastructure-main/: docker-compose.yml  prometheus.yml
services/analytics-service/: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
services/analytics-service/alembic/: env.py
services/analytics-service/src/: app.py
services/auth-service/: .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
services/auth-service/alembic/: env.py
services/auth-service/src/: app.py  main.py
services/notification-service/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
services/task-service/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml
services/task-service/alembic/: env.py
services/task-service/alembic/versions/: 93eb59f61c5d_init.py
services/task-service/src/: app.py
services/task-service/src/api/: tasks.py
services/task-service/src/core/: config.py  logger.py  security.py
services/task-service/src/core/exceptions/: tasks.py
services/task-service/src/domain/providers/: setup.py
services/task-service/src/domain/use_cases/: create_task.py  delete_task.py  get_task.py  get_tasks.py  update_task.py
services/task-service/src/infrastructure/kafka/: producer.py
services/task-service/src/infrastructure/postgres/: base.py  database.py  models.py  repositories.py
services/task-service/src/schemas/: pagination.py  tasks.py
(+43 files in other folders)
